# qingqi

./: .gitignore  AGENT.md  Cargo.toml  README.md
.cargo/: config.toml
crates/qingqi/: Cargo.toml  build.rs  icon_raster.rs
crates/qingqi-app/: Cargo.toml
crates/qingqi-app/src/app/: app_catalog.rs  app_index.rs  app_index_store.rs  background.rs  launcher.rs  launcher.rs.bak  mod.rs  runtime.rs  theme_service.rs  theme_store.rs  tray_manager.rs  window_controller.rs
crates/qingqi-app/src/app/themes/: macos-classic.json
crates/qingqi-app/src/core/: clipboard.rs  command.rs  database.rs  events.rs  mod.rs  page.rs  plugin_spec.rs  shortcut.rs  storage.rs
crates/qingqi-core/: Cargo.toml
crates/qingqi-core/src/: command_catalog.rs  command_usage.rs  lib.rs  plugin.rs  registry.rs
crates/qingqi-feature-about/: Cargo.toml
crates/qingqi-feature-about/src/: lib.rs  manifest.rs  plugin.rs  view.rs
crates/qingqi-feature-anti-peeping/: Cargo.toml
crates/qingqi-feature-anti-peeping/src/: lib.rs  manifest.rs  mod.rs  plugin.rs
crates/qingqi-feature-api-debugger/: Cargo.toml
crates/qingqi-feature-api-debugger/src/: code_gen.rs  curl_parser.rs  data_source.rs  import_openapi.rs  import_postman.rs  lib.rs  mac_ui.rs  manifest.rs  model.rs  plugin.rs  script_manager.rs  script_service.rs  service.rs  store.rs  variable_service.rs  view.rs
crates/qingqi-feature-api-debugger/src/view/: collection.rs  editor.rs  env.rs  mod.rs  request.rs  response.rs  tab.rs  types.rs
crates/qingqi-feature-api-debugger/src/view/components/: action_bar.rs  auth_panel.rs  collection_tree.rs  context_menu.rs  dialogs.rs  dropdown.rs  editor_panel.rs  env_editor.rs  kv_editor.rs  mod.rs  response_panel.rs  shared.rs  tab_bar.rs
crates/qingqi-feature-clipboard/: Cargo.toml
crates/qingqi-feature-clipboard/src/: data_source.rs  history_store.rs  lib.rs  manifest.rs  plugin.rs  service.rs
crates/qingqi-feature-clipboard/src/view/: aux_windows.rs  history.rs  mod.rs  settings.rs  shared.rs
crates/qingqi-feature-download-manager/: Cargo.toml
crates/qingqi-feature-download-manager/src/: lib.rs  manifest.rs  model.rs  plugin.rs  service.rs  store.rs  view.rs
crates/qingqi-feature-ftp-sftp-ssh-client/: Cargo.toml
crates/qingqi-feature-ftp-sftp-ssh-client/src/: backend.rs  lib.rs  manifest.rs  mod.rs  model.rs  plugin.rs  pool.rs  protocols.rs  runtime.rs  service.rs  settings.rs  store.rs  terminal.rs  transfer.rs  view.rs
crates/qingqi-feature-ftp-sftp-ssh-client/src/view/: glass.rs  mac_ui.rs  mod.rs  settings.rs
crates/qingqi-feature-gpui-demo/: Cargo.toml
crates/qingqi-feature-gpui-demo/src/: lib.rs  manifest.rs  plugin.rs
crates/qingqi-feature-http-capture/: Cargo.toml
crates/qingqi-feature-http-capture/src/: certificate.rs  engine.rs  lib.rs  manifest.rs  mock_engine.rs  mock_model.rs  mock_store.rs  mod.rs  model.rs  plugin.rs  proxy_handler.rs  store.rs  view.rs
crates/qingqi-feature-http-capture/tests/: proxy_runtime.rs
crates/qingqi-feature-image-compress/: Cargo.toml
crates/qingqi-feature-image-compress/src/: lib.rs  manifest.rs  plugin.rs  service.rs  view.rs
crates/qingqi-feature-json-parser/: Cargo.toml
crates/qingqi-feature-json-parser/src/: lib.rs  manifest.rs  plugin.rs  service.rs  view.rs
crates/qingqi-feature-qr-code/: Cargo.toml
crates/qingqi-feature-qr-code/src/: lib.rs  manifest.rs  plugin.rs  service.rs  store.rs  view.rs
crates/qingqi-feature-quick-launch/: Cargo.toml
crates/qingqi-feature-quick-launch/src/: lib.rs  manifest.rs  model.rs  parameters.rs  plugin.rs  service.rs  store.rs  view.rs
crates/qingqi-feature-ssh/: Cargo.toml
crates/qingqi-feature-ssh/src/: connection.rs  download.rs  lib.rs  log_util.rs  manifest.rs  model.rs  plugin.rs  service.rs  shell_cwd.rs  store.rs  terminal.rs  transfer.rs  upload.rs
crates/qingqi-feature-ssh/src/mappings/: keys.rs
crates/qingqi-feature-ssh/src/protocol/: ftp.rs  mod.rs  ssh.rs
crates/qingqi-feature-ssh/src/view/: app_settings.rs  aux_windows.rs  context_menu.rs  file_context_menu.rs  file_edit_confirm.rs  file_rename.rs  file_tree.rs  file_upload_overwrite.rs  mod.rs  profile_editor.rs  session_tabs.rs  settings_dialog.rs  sidebar.rs  terminal_element.rs  terminal_input.rs  terminal_pane.rs  terminal_pane_view.rs  terminal_shell_element.rs  transfer_panel.rs  virtual_list.rs
crates/qingqi-feature-system-settings/: Cargo.toml
crates/qingqi-feature-system-settings/src/: lib.rs  manifest.rs  plugin.rs  settings_store.rs  view.rs
crates/qingqi-feature-tray/: Cargo.toml
crates/qingqi-feature-tray/src/: lib.rs  manifest.rs  model.rs  plugin.rs  service.rs  settings.rs  settings_view.rs  view.rs
crates/qingqi-platform/: Cargo.toml
crates/qingqi-platform/src/: apps.rs  clipboard.rs  display.rs  hotkey.rs  icon_raster.rs  lib.rs  low_level_hook.rs  macos.rs  network.rs  power.rs  shell.rs  svg_icon.rs  theme.rs  tray.rs  tray_settings.rs
crates/qingqi-platform/src/apps/: unsupported.rs  windows.rs
crates/qingqi-plugin/: Cargo.toml
crates/qingqi-plugin/src/: app.rs  clipboard.rs  command.rs  database.rs  dict_store.rs  events.rs  host.rs  lib.rs  log.rs  plugin.rs  plugin_spec.rs  shortcut.rs  storage.rs  theme.rs  tray.rs
crates/qingqi-ui/: Cargo.toml
crates/qingqi-ui/src/: assets.rs  lib.rs  text_input.rs  theme.rs
crates/qingqi-ui/src/ui/: glass.rs  mod.rs  traffic_light.rs  window_chrome.rs
crates/qingqi-ui/src/ui/components/: button.rs  chip.rs  empty_state.rs  mod.rs  overlay_host.rs  settings.rs  status_pill.rs  table_header.rs  toggle.rs
crates/qingqi/assets/: macos-Info.plist
crates/qingqi/src/: main.rs
crates/qingqi/src/features/: registry.rs
docs/: CHANGELOG-2026-06-10.md  COMPLETION-SUMMARY.md  IMPROVEMENT-PLAN.md  QUICK-TASKS.md  REFACTOR-2026-06-10.md  api-debugger-redesign.md  architecture-adjustment-plan.md  architecture.md  claude-code-controller.md  claude-task-queue.json  codebase-remediation-blueprint.md  conventions.md  core-architecture-spec.md  gpt-5.4-workspace-split-execution-plan.md  gpui-component-guide.md  migration-M1.md  (+7 more)
(+355 files in other folders)
