[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["fwfx1234"]
description = "A lightweight Rust + GPUI desktop toolbox inspired by Suishou."
license = "MIT"

[workspace.dependencies]
alacritty_terminal = "0.26"
anyhow = "1.0"
async-trait = "0.1"
dirs = "6.0"
global-hotkey = "0.8"
gpui = { version = "=0.2.2", features = ["runtime_shaders"] }
gpui-component = "0.5.1"
hudsucker = { version = "0.24", default-features = false, features = ["rcgen-ca", "rustls-client"] }
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg", "png", "webp"] }
libc = "0.2"
plist = "1.7"
qrcode = "0.14"
quircs = "0.10"
r2d2 = "0.8"
r2d2_sqlite = { version = "0.31.0", features = ["bundled"] }
rcgen = { version = "0.14", features = ["crypto"] }
regex = "1.12"
reqwest = { version = "0.12", features = ["blocking", "stream"] }
rfd = "0.15"
russh = "0.54"
russh-sftp = "2.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
ssh2 = "0.9"
suppaftp = { version = "8.0.3", default-features = false, features = ["tokio-rustls-aws-lc-rs", "deprecated"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tiny-skia = "0.11"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "registry"] }
tray-icon = { version = "0.21", default-features = false }
unicode-segmentation = "1.12"
usvg = "0.45"
uuid = { version = "1.16", features = ["v4"] }
resvg = "0.45"
rustls-native-certs = "0.8"
sha2 = "0.10"
webpki-roots = "0.26"

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
todo = "warn"
dbg_macro = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "z"
strip = "symbols"
