[package]
name = "qingqi-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
global-hotkey.workspace = true
gpui.workspace = true
gpui-component.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
qingqi-core = { path = "../qingqi-core" }
qingqi-platform = { path = "../qingqi-platform" }
qingqi-plugin = { path = "../qingqi-plugin" }
qingqi-ui = { path = "../qingqi-ui" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
