[package]
name = "qingqi-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
qingqi-plugin = { path = "../qingqi-plugin" }
rusqlite.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true

[lints]
workspace = true
