[package]
name = "qingqi-feature-anti-peeping"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
gpui-component.workspace = true
gpui.workspace = true
qingqi-plugin = { path = "../qingqi-plugin" }
qingqi-ui = { path = "../qingqi-ui" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
