[package]
name = "qingqi-feature-download-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
gpui-component.workspace = true
gpui.workspace = true
qingqi-platform = { path = "../qingqi-platform" }
qingqi-plugin = { path = "../qingqi-plugin" }
qingqi-ui = { path = "../qingqi-ui" }
dirs.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
urlencoding = "2.1.3"
uuid.workspace = true

[lints]
workspace = true
