[package]
name = "qingqi-feature-ftp-sftp-ssh-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
gpui.workspace = true
gpui-component.workspace = true
qingqi-platform = { path = "../qingqi-platform" }
qingqi-plugin = { path = "../qingqi-plugin" }
qingqi-ui = { path = "../qingqi-ui" }
rfd.workspace = true
russh.workspace = true
russh-sftp.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
suppaftp.workspace = true
time.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
uuid.workspace = true
rustls-native-certs.workspace = true
webpki-roots.workspace = true

[lints]
workspace = true
