[package]
name = "qingqi-feature-quick-launch"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
gpui-component.workspace = true
gpui.workspace = true
libc.workspace = true
qingqi-platform = { path = "../qingqi-platform" }
qingqi-plugin = { path = "../qingqi-plugin" }
qingqi-ui = { path = "../qingqi-ui" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true

[lints]
workspace = true
