[package]
name = "qingqi-feature-ssh"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SSH/SFTP/FTP/FTPS 远程连接管理"
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
gpui.workspace = true
gpui-component.workspace = true
qingqi-plugin = { path = "../qingqi-plugin" }
qingqi-ui = { path = "../qingqi-ui" }
russh.workspace = true
russh-sftp.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
suppaftp.workspace = true
tokio.workspace = true
time.workspace = true
uuid.workspace = true
alacritty_terminal.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
tracing.workspace = true

[lints]
workspace = true
