[package]
name = "qingqi-feature-system-settings"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
qingqi-platform = { path = "../qingqi-platform" }
qingqi-plugin = { path = "../qingqi-plugin" }
qingqi-ui = { path = "../qingqi-ui" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
